force-app/main/default/objects/Funding_Transaction__c/Funding_Transaction__c.object-meta.xml
<CustomObject>
    <description>Captures individual transactions that can be used for a multitude of purposes</description>
    <label>Funding Transaction</label>
    <nameField>
        <displayFormat>FT-{00000}</displayFormat>
        <label>Funding Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>