force-app/main/default/objects/Funding_Transaction__c/fields/Award_Owner_List_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Award_Owner_List_Trigger__c</fullName>
    <formula>Funding_Award__r.OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Award Owner List Trigger</label>
    <type>Checkbox</type>
</CustomField>