force-app/main/default/objects/Funding_Transaction__c/fields/Award_Searchable_Name__c.field-meta.xml
<CustomField>
    <fullName>Award_Searchable_Name__c</fullName>
    <description>Text name to be used in list views</description>
    <label>Award Searchable Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>