force-app/main/default/objects/Funding_Transaction__c/fields/Co_funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Co-funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>