force-app/main/default/objects/Funding_Transaction__c/fields/Consortium_Member__c.field-meta.xml
<CustomField>
    <fullName>Consortium_Member__c</fullName>
    <description>Name of consortium member this transaction relates to</description>
    <label>Consortium Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>