force-app/main/default/objects/Funding_Transaction__c/fields/Date_Evidence_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Date_Evidence_Uploaded__c</fullName>
    <label>Date Evidence Uploaded</label>
    <type>Date</type>
</CustomField>