force-app/main/default/objects/Funding_Transaction__c/fields/Evidence_Attached__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when evidence has been attached to award to support the transaction</description>
    <label>Evidence Attached</label>
    <type>Checkbox</type>
</CustomField>