force-app/main/default/objects/Funding_Transaction__c/fields/Evidence_Description__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Description__c</fullName>
    <description>Narrative provided by GR when uploading files for evidence</description>
    <label>Evidence Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>