force-app/main/default/objects/Funding_Transaction__c/fields/Funding_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Funding_Reconciliation__c</fullName>
    <label>Parent Funding Reconciliation</label>
    <referenceTo>Funding_Reconciliation__c</referenceTo>
    <relationshipLabel>Funding Transactions</relationshipLabel>
    <relationshipName>Funding_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>