force-app/main/default/objects/Funding_Transaction__c/fields/Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Grant_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>