force-app/main/default/objects/Funding_Transaction__c/fields/Invoice_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference_Number__c</fullName>
    <description>Unique identifier for transaction supplied by funding recipient</description>
    <label>Invoice/Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>