force-app/main/default/objects/Funding_Transaction__c/fields/Latest_Summary_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Summary_Date__c</fullName>
    <description>Most recent date that reconciliation date has been summarised</description>
    <label>Latest Summary Date</label>
    <type>Date</type>
</CustomField>