force-app/main/default/objects/Funding_Transaction__c/fields/Query_Reason__c.field-meta.xml
<CustomField>
    <fullName>Query_Reason__c</fullName>
    <label>Query Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction date</fullName>
            </value>
            <value>
                <fullName>Insufficient evidence</fullName>
            </value>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>A&amp;A incorrect</fullName>
            </value>
            <value>
                <fullName>Capital incorrect</fullName>
            </value>
            <value>
                <fullName>Discrepancy</fullName>
            </value>
            <value>
                <fullName>Ineligible expenditure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>