force-app/main/default/objects/Funding_Transaction__c/fields/Related_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Related_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to installer account record</description>
    <label>Related Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Transactions</relationshipLabel>
    <relationshipName>Funding_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>