force-app/main/default/objects/Funding_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Summarised</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Change Requested</fullName>
                <isActive>false</isActive>
                <label>Change Requested</label>
            </value>
            <value>
                <fullName>Ineligible</fullName>
                <isActive>false</isActive>
                <label>Ineligible</label>
            </value>
            <value>
                <fullName>Reconciled</fullName>
                <isActive>false</isActive>
                <label>Reconciled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>