force-app/main/default/objects/Funding_Transaction__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <description>Text name of supplier</description>
    <label>Supplier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>