force-app/main/default/objects/Funding_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Date of transaction as per supporting documents</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>