force-app/main/default/objects/Funding_Transaction__c/fields/Transaction_Description__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Description__c</fullName>
    <description>Short summary of the transaction details</description>
    <inlineHelpText>Short summary of the transaction details (255 Characters or or Less</inlineHelpText>
    <label>Transaction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>