force-app/main/default/objects/Funding_Transaction__c/fields/Transaction_Query__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Query__c</fullName>
    <description>Field for notes querying a particular transaction</description>
    <label>Transaction Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>