force-app/main/default/objects/Funding_Transaction__c/fields/Transaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Summary__c</fullName>
    <description>Short summary of the transaction details</description>
    <label>Transaction Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>