force-app/main/default/objects/Funding_Transaction__c/recordTypes/WH_SHF.recordType-meta.xml
<RecordType>
    <fullName>WH_SHF</fullName>
    <active>true</active>
    <label>WH:SHF</label>
</RecordType>