force-app/main/default/objects/Funding_Transaction__c/listViews/All_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Award_Searchable_Name__c</columns>
    <columns>Transaction_Description__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Co_funding_Amount__c</columns>
    <columns>Grant_Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Transactions</label>
</ListView>