force-app/main/default/objects/Funding_Transaction__c/listViews/Select_Transactions_for_Evidence.listView-meta.xml
<ListView>
    <fullName>Select_Transactions_for_Evidence</fullName>
    <columns>NAME</columns>
    <columns>Award_Searchable_Name__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Evidence_Required__c</columns>
    <columns>Evidence_Attached__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Funding_Transaction__c.WH_SHF</value>
    </filters>
    <label>Select Transactions for Evidence</label>
</ListView>