force-app/main/default/objects/Funding_Transaction__c/listViews/Transactions_to_Review.listView-meta.xml
<ListView>
    <fullName>Transactions_to_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Award_Owner_List_Trigger__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Transactions to Review</label>
</ListView>